Firebaseの組み込みと、repositoryをentityの内部クラス化を行った。

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primaryColor">#33691e</color>
-    <color name="primaryLightColor">#629749</color>
-    <color name="primaryDarkColor">#003d00</color>
-    <color name="secondaryColor">#01579b</color>
-    <color name="secondaryLightColor">#4f83cc</color>
-    <color name="secondaryDarkColor">#002f6c</color>
-    <color name="primaryTextColor">#ffffff</color>
-    <color name="secondaryTextColor">#ffffff</color>
+    <color name="colorPrimary">#33691e</color>
+    <color name="colorPrimaryLight">#629749</color>
+    <color name="colorPrimaryDark">#003d00</color>
+    <color name="colorSecondary">#01579b</color>
+    <color name="colorSecondaryLight">#4f83cc</color>
+    <color name="colorSecondaryDark">#002f6c</color>
+    <color name="textColorPrimary">#ffffff</color>
+    <color name="textColorSecondary">#ffffff</color>
     <color name="colorAccent">#f57f17</color>
 </resources>
