--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,10 +9,10 @@
         tools:context=".MainActivity"
         tools:showIn="@layout/app_bar_main">
 
-    <TextView
+    <android.support.v4.view.ViewPager
+            android:id="@+id/view_pager"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello World!"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
