--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,8 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-            android:id="@+id/action_settings"
+            android:id="@+id/action_edit_card"
             android:orderInCategory="100"
-            android:title="@string/action_settings"
-            app:showAsAction="never"/>
+            android:icon="@drawable/ic_edit_white_24dp"
+            android:title="@string/action_edit_card"
+            app:showAsAction="always"/>
 </menu>
