--- a/app/src/main/res/layout/view_my_card.xml
+++ b/app/src/main/res/layout/view_my_card.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 >
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
             android:id="@+id/header_card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -60,10 +60,10 @@
                 android:layout_gravity="start|bottom"
                 tools:ignore="ContentDescription"
                 />
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
     <ListView
             android:id="@+id/partner_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
     </ListView>
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
