--- a/app/src/main/res/layout/view_partner_item.xml
+++ b/app/src/main/res/layout/view_partner_item.xml
@@ -5,12 +5,14 @@
         android:layout_width="match_parent"
         android:layout_height="72dp"
         app:cardCornerRadius="4dp">
+
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingLeft="16dp"
             android:paddingRight="16dp">
+        <!-- アイコン -->
         <ImageView
                 android:id="@+id/partner_icon"
                 android:layout_width="48dp"
@@ -24,16 +26,32 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_gravity="center_vertical">
+            <!-- 氏名 -->
             <TextView
                     android:id="@+id/partner_name_text"
                     style="@style/NameText"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-            <TextView
-                    android:id="@+id/partner_phonetic_text"
-                    style="@style/PhoneticText"
+                    android:layout_height="wrap_content"
+                    />
+            <LinearLayout
+                    android:orientation="horizontal"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content">
+                <TextView
+                        android:id="@+id/partner_first_name_text"
+                        style="@style/PhoneticText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        />
+                <Space
+                        android:layout_width="4pt"
+                        android:layout_height="match_parent"/>
+                <TextView
+                        android:id="@+id/partner_family_name_text"
+                        style="@style/PhoneticText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
