--- a/app/src/main/res/values/id_strings.xml
+++ b/app/src/main/res/values/id_strings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="google_client_id">123237273535-fsdqme62tohj47tfsev3q6ffnfug0rld.apps.googleusercontent.com</string>
+    <string name="google_client_id">AIzaSyBLYHytKXohQWJScPaig9Hs4SzjrGyDHnk</string>
 </resources>
