--- a/app/src/main/res/layout/activity_card_edit.xml
+++ b/app/src/main/res/layout/activity_card_edit.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/root_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         >
-    <include
-            layout="@layout/view_square_card"/>
 
     <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/app_bar"
@@ -26,8 +23,10 @@
                 app:layout_scrollFlags="scroll|exitUntilCollapsed"
                 app:contentScrim="?attr/colorPrimary">
 
-            <include
-                    layout="@layout/view_square_card"/>
+            <com.abplus.cardsquare.views.SquareCardView
+                    android:id="@+id/square_card"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
 
             <androidx.appcompat.widget.Toolbar
                     android:id="@+id/toolbar"
@@ -43,19 +42,31 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            tools:showIn="@layout/activity_scrolling"
             >
         <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="16dp"
                 >
+            <!-- チュートリアルの説明 -->
+            <TextView
+                    android:id="@+id/tutorial_text_0"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorPrimary"
+                    android:padding="16dp"
+                    android:text="@string/tutorial_card_edit"
+                    android:textColor="@color/textColorPrimary"
+                    android:textSize="@dimen/fs_large"
+                    android:lineSpacingExtra="1pt"
+                    />
             <!-- 氏名 -->
             <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
                     >
                 <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/name_edit"
@@ -72,6 +83,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
                     >
                 <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/first_name_edit"
@@ -88,6 +101,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
                     >
                 <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/family_name_edit"
@@ -105,9 +120,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
                     >
                 <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/introduce_edit"
+                        android:id="@+id/introduction_edit"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/hint_introduce_edit"
@@ -120,6 +137,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
                     >
                 <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/description_edit"
@@ -130,6 +149,18 @@
                         android:inputType="textMultiLine"
                         />
             </com.google.android.material.textfield.TextInputLayout>
+            <!-- チュートリアルの説明 -->
+            <TextView
+                    android:id="@+id/tutorial_text_1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorPrimary"
+                    android:padding="16dp"
+                    android:text="@string/tutorial_card_edit"
+                    android:textColor="@color/textColorPrimary"
+                    android:textSize="@dimen/fs_large"
+                    android:lineSpacingExtra="1pt"
+                    />
             <!-- アカウントリスト -->
             <LinearLayout
                     android:id="@+id/account_container"
