--- a/app/src/main/res/layout/view_my_card.xml
+++ b/app/src/main/res/layout/view_my_card.xml
@@ -1,66 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 >
-    <androidx.cardview.widget.CardView
+    <com.abplus.cardsquare.views.SquareCardView
             android:id="@+id/header_card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardCornerRadius="0dp"
             android:elevation="6dp"
             >
-        <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/activity_horizontal_margin">
-            <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                <ImageView
-                        android:id="@+id/card_image"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        tools:ignore="ContentDescription" />
-                <TextView
-                        android:id="@+id/description_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="end|top"
-                        />
-                <TextView
-                        android:id="@+id/address_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="end|bottom"
-                        />
-            </FrameLayout>
-            <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                <TextView
-                        android:id="@+id/name_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        />
-                <TextView
-                        android:id="@+id/phonetic_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-            </LinearLayout>
-        </LinearLayout>
-        <ImageView
-                android:id="@+id/card_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="start|bottom"
-                tools:ignore="ContentDescription"
-                />
-    </androidx.cardview.widget.CardView>
+    </com.abplus.cardsquare.views.SquareCardView>
     <ListView
             android:id="@+id/partner_list"
             android:layout_width="match_parent"
