--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,10 @@
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="off_white">#FBFAF3</color>
+    <color name="gray">#999</color>
+    <color name="ivory">#FFFFF0</color>
+    <color name="white_50">#80FFFFFF</color>
 
     <color name="textBlack">#333</color>
+    <color name="textGray">#999</color>
 </resources>
