--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -47,4 +47,11 @@
         <item name="android:textStyle">bold</item>
         <item name="android:background">@color/translucent</item>
     </style>
+
+    <style name="ProgressDialog"
+           parent="android:style/Theme.Dialog">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+    </style>
+
 </resources>
