--- a/app/src/main/res/layout/view_square_card.xml
+++ b/app/src/main/res/layout/view_square_card.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="0dp">
-    <com.abplus.cardsquare.views.SquareLayout
+    <com.abplus.cardsquare.utils.views.SquareLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -95,5 +95,5 @@
                         />
             </LinearLayout>
         </LinearLayout>
-    </com.abplus.cardsquare.views.SquareLayout>
+    </com.abplus.cardsquare.utils.views.SquareLayout>
 </androidx.cardview.widget.CardView>
