Observeは働いているけど、bindingがそれに応じてない。

--- a/app/src/main/res/layout/activity_card_edit.xml
+++ b/app/src/main/res/layout/activity_card_edit.xml
@@ -86,7 +86,7 @@
                             android:layout_height="wrap_content"
                             android:hint="@string/hint_handle_name_edit"
                             style="@style/NameText"
-                            android:text="@{viewModel.handleName}"
+                            android:text="@={viewModel.handleName}"
                             android:maxLines="1"
                             android:inputType="text"
                             />
@@ -105,7 +105,7 @@
                             android:layout_height="wrap_content"
                             android:hint="@string/hint_first_name_edit"
                             style="@style/NameText"
-                            android:text="@{viewModel.firstName}"
+                            android:text="@={viewModel.firstName}"
                             android:maxLines="1"
                             android:inputType="textPhonetic"
                             />
@@ -124,7 +124,7 @@
                             android:layout_height="wrap_content"
                             android:hint="@string/hint_family_name_edit"
                             style="@style/NameText"
-                            android:text="@{viewModel.familyName}"
+                            android:text="@={viewModel.familyName}"
                             android:maxLines="1"
                             android:inputType="textPhonetic"
                             />
@@ -143,7 +143,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="@string/hint_introduce_edit"
-                            android:text="@{viewModel.introduction}"
+                            android:text="@={viewModel.introduction}"
                             style="@style/NameText"
                             android:inputType="textMultiLine"
                             />
@@ -161,7 +161,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="@string/hint_description_edit"
-                            android:text="@{viewModel.description}"
+                            android:text="@={viewModel.description}"
                             style="@style/NameText"
                             android:inputType="textMultiLine"
                             />
